<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:background="#010">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_box_white"
                android:drawableTop="@drawable/ic_date_range_black_24dp"
                android:text="@string/menu_date"
                android:textSize="16sp" />

            <Button
                android:id="@+id/money_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_box_white"
                android:drawableTop="@drawable/ic_local_atm_black_24dp"
                android:gravity="center"
                android:text="@string/menu_money"
                android:textSize="16sp" />

            <Button
                android:id="@+id/bucketList_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignRight="@id/money_button"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_box_white"
                android:drawableTop="@drawable/ic_assignment_black_24dp"
                android:gravity="center"
                android:text="@string/menu_bucket_list"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/photo_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_box_white"
                android:drawableTop="@drawable/ic_wallpaper_black_24dp"
                android:text="@string/menu_photo"
                android:textSize="16sp"
                android:layout_marginStart="62dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/setting_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_box_white"
                android:drawableTop="@drawable/ic_settings_black_24px"
                android:text="@string/menu_setting"
                android:textSize="16sp"
                android:layout_marginStart="48dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/photo_menu" />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>





