<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calendar_detail_date_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="first.taesu.calendarDetailDateAdd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.98"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:text="@string/date_list_add" />

        <Button
            android:id="@+id/date_add_button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_add_box_black_24dp"
            android:nextFocusRight="@string/date_list"
            android:text="@string/date_list_add_confrim" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="날짜" />

        <Spinner
            android:id="@+id/spinner_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="년" />

        <Spinner
            android:id="@+id/spinner_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="월" />

        <Spinner
            android:id="@+id/spinner_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="일" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="시간" />

        <Spinner
            android:id="@+id/spinner_APm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Spinner>

        <Spinner
            android:id="@+id/spinner_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="시" />

        <Spinner
            android:id="@+id/spinner_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="분" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="subject" />

        <EditText
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:hint="your subject" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="location" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="your location" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="memo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="your memo"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6" />
    </LinearLayout>


</LinearLayout>
